# paincave-analysis

./: .env.example  CLAUDE.md  pyproject.toml
docs/: analysis-output.md  audio-architecture.md  output-formats.md  pcav-format.md
src/: analyze.py  content_hash.py  extract_als.py  import_song.py  import_track.py  metadata_parser.py  metadata_writer.py  pcav.py  peaks.py  reanalyze.py  visualize.py
