[project]
name = "paincave-analysis"
version = "3.0.0"
description = "Audio analysis tools for Pain Cave spin class workouts"
requires-python = ">=3.11"
dependencies = [
    "madmom @ git+https://github.com/CPJKU/madmom",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[tool.uv]
dev-dependencies = []
